force-app/main/default/objects/PRISM_ServiceTerritory__c/PRISM_ServiceTerritory__c.object-meta.xml
<CustomObject>
    <description>Top-level geographic and operational territory for utility inspection coverage.</description>
    <label>Service Territory</label>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>