force-app/main/default/objects/PRISM_ServiceTerritory__c/fields/ActiveFireNearby__c.field-meta.xml
<CustomField>
    <fullName>ActiveFireNearby__c</fullName>
    <label>Active Fire Nearby</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>