force-app/main/default/objects/PRISM_ServiceTerritory__c/fields/CircuitZone__c.field-meta.xml
<CustomField>
    <fullName>CircuitZone__c</fullName>
    <label>Circuit Zone</label>
    <type>Text</type>
    <length>100</length>
</CustomField>